fixed mission dark mode

--- a/mission/prove.css
+++ b/mission/prove.css
@@ -3,6 +3,10 @@
     max-width: 60%;
     margin: 0 auto;
     font-size: 20px;
+    border-width: 1px;
+    border-color: gray;
+    border-style: solid;
+    padding: 20px;
 }
 
 h1
